<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, iMoney!</string>
    <string name="today">今天</string>
    <string name="app_name">IMoney</string>
    <string name="expense">花费</string>
	<string name="record">记录</string>
	<string name="see">查看</string>
	<string name="group">类别</string>
	<string name="graphic">图表</string>
	<string name="addition">注释</string>
	<string name="hasBeenRecorded">已记录</string>
	<string name="noExpense">没有花费类别被选择</string>
	<string name="year">年</string>
	<string name="month">月</string>
	<string name="day">日</string>
	<string name="noNextMonth">没有下个月的任何记录</string>
	<string name="noBeforeMonth">没有上个月的任何记录</string>
	<string name="back">返回</string>
	<string name="ok">确定</string>
	<string name="cancel">取消</string>
	<string name="orderByDay">按天</string>
	<string name="orderByWeek">按周</string>
	<string name="orderByMonth">按月</string>
	<string name="more">更多</string>
	<string name="normalGroup">普通类别</string>
	<string name="noAddition">没有描述</string>
	<string name="allExpense">共花费</string>
	<string name="piece">笔</string>
	<string name="addNewGroup">添加新类别</string>
	<string name="addNewSecondGroup">添加新子类别</string>
	<string name="secondgroup">子类别</string>
	<string name="stat">统计</string>
	<string name="expend">花费</string>
	<string name="thisMonth">本月</string>
	
	<string name="favouriteGroup">个人常用</string>
	<string name="noNumber">没有输入金额</string>
</resources>