<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainFirstBox"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    android:orientation="vertical" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainLabelBox"
    android:background="@drawable/label"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/mainLabelText"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="10pt"
        android:textColor="#FFFAFA"
        android:text="@string/expense" />
</LinearLayout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainNumBox"
    android:background="@drawable/smallbox"
    android:layout_margin="10dp"
    android:orientation="vertical" >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="5dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_weight="1"
    	android:orientation="horizontal" >
    <TextView
        android:id="@+id/mainIndicator"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="7pt"
        android:textColor="#000000"
        android:text="@string/expense" />
    <EditText
        android:id="@+id/mainGetExpense"
        android:singleLine="true"
        android:layout_gravity="center_vertical"
        android:numeric="decimal"
        android:layout_width="100dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="7pt"
        android:textColor="#000000" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
   		android:id="@+id/mainButtonBox"
    	android:layout_marginRight="10dp"
    	android:layout_alignParentRight="true"
    	android:layout_weight="1"
    	android:layout_gravity="center_vertical"
    	android:orientation="horizontal" >
    
    <Button
        android:id="@+id/mainRecord"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/writedown"
        android:layout_marginRight="10dp"
        />
     <Button
        android:id="@+id/mainExpand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pulldown"
		 />
     </LinearLayout>
    
        
     </RelativeLayout>>
      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:id="@+id/additionGetBox"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="5dp"
    	android:orientation="horizontal" >
     <TextView
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="7pt"
        android:textColor="#000000"
        android:text="@string/addition" />
    <EditText
        android:id="@+id/mainGetAddition"
        android:singleLine="true"
        android:layout_gravity="center_vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:textSize="7pt"
        android:textColor="#000000" />
     </LinearLayout>
</LinearLayout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainSwitchBox"
    android:orientation="vertical" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/switchback"
    android:id="@+id/mainSwitchBoxMiddle"    
    android:orientation="horizontal" 
    android:layout_gravity="center_horizontal">
    
    
 <Button
        android:id="@+id/mainFavouriteGroup"
        android:layout_width="fill_parent"        
        android:layout_height="wrap_content"
        android:textSize="5pt"       
        android:background="@drawable/switchleft"        
        
        android:layout_margin="1dp"
        android:layout_weight="1"
         android:textColor="#FFFAFA"
        android:text="@string/favouriteGroup" />
 <Button
        android:id="@+id/mainNormalGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="5pt"
        android:background="@drawable/switchright"
        android:layout_margin="1dp"
         android:textColor="#FFFAFA"
        android:layout_weight="1"
        android:text="@string/normalGroup" />    
    
 </LinearLayout>
</LinearLayout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/mainMiddleBox"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="60dp"
    android:background="@drawable/middlebox"
    
    android:orientation="vertical" >
    <RelativeLayout
        android:id="@+id/expenseGroupBox"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        />
    
</LinearLayout>
    
</LinearLayout>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_alignParentBottom="true"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainBottomBox"
    android:background="@drawable/label"
    android:orientation="horizontal" >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	
   	 android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:id="@+id/mainSee"
     android:layout_weight="1"
     android:layout_gravity="center_vertical"
     android:layout_marginLeft="5dp"
     android:orientation="vertical" >
     <ImageView
     android:layout_gravity="center_horizontal"
     android:id="@+id/mainSeeImage"
   	 android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/mainsee"
         />
	 </LinearLayout>
	 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	
   	 android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:id="@+id/mainGroup"
     android:layout_weight="1"
     android:layout_gravity="center_vertical"
     android:layout_marginLeft="5dp"
     android:orientation="horizontal" >
      <ImageView
     android:layout_gravity="center_horizontal"
     android:id="@+id/mainGroupImage"
   	 android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/maingroup"
         />
	 </LinearLayout>
	 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	
   	 android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:id="@+id/mainGraphic"
     android:layout_weight="1"
     android:layout_gravity="center_vertical"
     android:layout_marginLeft="5dp"
     android:orientation="horizontal" >
         <ImageView
     android:layout_gravity="center_horizontal"
     android:id="@+id/mainGraphicImage"
   	 android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/maingraphic"
         />
	 </LinearLayout>
	 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	
   	 android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:id="@+id/mainMore"
     android:layout_weight="1"
     android:layout_gravity="center_vertical"
     android:layout_marginLeft="5dp"
     android:orientation="horizontal" >
     <ImageView
     android:layout_gravity="center_horizontal"
     android:id="@+id/mainMoreImage"
   	 android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/mainmore"
         />
	 </LinearLayout>
</LinearLayout>
</RelativeLayout>